--- a/start.html
+++ b/start.html
@@ -4,6 +4,36 @@
 </head>
 <body>
 <h1>Welcome to my website</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+
+<p>This is my <i><b><u>first</u></b></i> paragraph.</p>
+
+<p>Visit <a href="http://google.com">google.com</a></p>
+
+<p>A list of fruit:</p>
+<ul>
+<li><a href="http://apple.com" target="_blank">Apple</a></li>
+<li>Banana</li>
+<li>Orange</li>
+<li>Pinneapple</li>
+<li>Passion Fruit</li>
+</ul>
+
+<p>Ranking the best meat:</p>
+<ol>
+<li>Steak</li>
+<li>Bacon</li>
+<li>Burger</li>
+<li>Ribs</li>
+</ol>
+
+<p><img src="puppy.jpg" width="300" alt="Photo of Puppy" title="This is a puppy"></p>
+<img src="beagle.jpg" width="300" alt="Photo of Puppy" title="This is a puppy">
+
 
 </body>
 </html>
