--- a/arizonafanpage.html
+++ b/arizonafanpage.html
@@ -23,7 +23,7 @@
 
     <section>
       <h1>Welcome to the Arizona Cardinals Fan Page</h1>
-      <p><img src="mercharizona.jpg" alt="Tide Pods image" class="pod"></p>
+      <p><img src="mercharizona.jpg" alt="Hopkins Jersey image" class="pod"></p>
 
       <p>The most obvious Super Bowl Contender this year.</p>
 
