--- a/explore.html
+++ b/explore.html
@@ -26,32 +26,32 @@
           <h2>Choose a US National Park Below:</h2>
             <article>
                 <figure class="random">
-                    <img src="parks/glacier.jpg" alt="Glacier"/>
+                    <img src="/parks/glacier.jpg" alt="Glacier"/>
                     <figcaption>Glacier National Park</figcaption>
                 </figure>
 
                 <figure class="random">
-                    <img src="parks/yosemite.jpg" alt="Yosemite"/>
+                    <img src="/parks/yosemite.jpg" alt="Yosemite"/>
                     <figcaption>Yosemite National Park</figcaption>
                 </figure>
 
                 <figure class="random">
-                    <img src="parks/yellowstone.jpg" alt="Yellowstone"/>
+                    <img src="/parks/yellowstone.jpg" alt="Yellowstone"/>
                     <figcaption>Yellowstone National Park</figcaption>
                 </figure>
 
                 <figure class="random">
-                    <img src="parks/zion.jpg" alt="Zion"/>
+                    <img src="/parks/zion.jpg" alt="Zion"/>
                     <figcaption>Zion National Park</figcaption>
                 </figure>
 
                 <figure class="random">
-                    <img src="parks/teton.jpg" alt="Teton"/>
+                    <img src="/parks/teton.jpg" alt="Teton"/>
                     <figcaption>Teton National Park</figcaption>
                 </figure>
 
                 <figure class="random">
-                    <img src="parks/arches.jpg" alt="Arches"/>
+                    <img src="/parks/arches.jpg" alt="Arches"/>
                     <figcaption>Arches National Park</figcaption>
                 </figure>
             </article>
