--- a/customlogo.html
+++ b/customlogo.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AstroElmo</title>
-  <link rel="stylesheet" href="mergetwophotos.css">
+  <title>Custom Logo</title>
+  <link rel="stylesheet" href="customlogo.css">
 </head>
 
 <body>
