--- a/slideshow/slideshow.html
+++ b/slideshow/slideshow.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Slideshow</title>
-    <link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/dark/dark.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="slideshow/themes/default/default.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="slideshow/themes/light/light.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="slideshow/themes/dark/dark.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="slideshow/themes/bar/bar.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="slideshow/nivo-slider.css" type="text/css" media="screen" />
   </head>
   <body>
     <div id="wrap">
@@ -22,10 +22,10 @@
 <section>
   <div class="slider-wrapper theme-default">
       <div id="slider" class="nivoSlider">
-          <img src="images/thor.jpg" data-thumb="images/thor.jpg" alt="" />
-          <a href=""><img src="images/ironman.png" data-thumb="images/ironman.png" alt="" title="Iron Man" /></a>
-          <img src="images/blackpanther.jpg" data-thumb="images/blackpanther.jpg" alt="" data-transition="slideInLeft" />
-          <img src="images/captainamerica.jpg" data-thumb="images/captainamerica.jpg" alt="" title="#htmlcaption" />
+          <img src="slideshow/images/thor.jpg" data-thumb="slideshow/images/thor.jpg" alt="" />
+          <a href=""><img src="slideshow/images/ironman.png" data-thumb="slideshow/images/ironman.png" alt="" title="Iron Man" /></a>
+          <img src="slideshow/images/blackpanther.jpg" data-thumb="slideshow/images/blackpanther.jpg" alt="" data-transition="slideInLeft" />
+          <img src="slideshow/images/captainamerica.jpg" data-thumb="slideshow/images/captainamerica.jpg" alt="" title="#htmlcaption" />
       </div>
       <div id="htmlcaption" class="nivo-html-caption">
           <strong>Captain America</strong></a>.
