--- a/final/index.html
+++ b/final/index.html
@@ -24,7 +24,7 @@
 
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
         <li><a href="menu.html">Menu</a></li>
