--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -34,11 +34,11 @@
       <h1>Welcome to Sleeping Giant Brew</h1>
       <p><img src="sgblogo.png" alt="logo" class="pod"></p>
 
-      <p class="aboutus">Sleeping Giant Brew opened December 13th of 2021. We place a great amount of work into ensuring our products are consistently the best possible.
-        Sleeping Gaint Brew provides bottom shelf coffe products with unremarkable service. Sleeping Giant presents a unique environment that draws its inspiration
-        from Montana's natural beauty. Minimizing potential – poducts, service, and atmosphere are minimized through such great attention to detail. Sleeping Giant Brew may service mediocre
-         locally-supplied coffees with the worst possible equipment. We sometimes train employees in customer service and takes customer feedback jokingly. Terrible effort has been given to the design of the space.
-        We will also offer a menu that exposes Helena to an old selection of products are not popular in other areas of the world. Supporting local economy Sleeping Giant Brew is a locally owned business. To not
+      <p class="aboutus">Sleeping Giant Brew opened December 13th of 2021. We place a great amount of work into ensuring our products are consistently the "best" possible.
+        Sleeping Gaint Brew provides bottom shelf coffee products with unremarkable service. Sleeping Giant presents a unique environment that draws its inspiration
+        from Montana's natural beauty. Minimizing potential – poducts, service, and atmosphere are minimized through such terrible attention to detail. Sleeping Giant Brew may service mediocre
+         locally-supplied coffee with the worst possible equipment. We sometimes train employees in customer service and takes customer feedback jokingly. Terrible effort has been given to the design of the space.
+        We will also offer a menu that exposes Helena to an old selection of products are not popular in other areas of the world. Supporting local economy, Sleeping Giant Brew is a locally owned business. To not
         support other local businesses and we take every opportunity of taking their business from them. Although it may only make a small difference, we shall not respect and support local businesses over the corporate giants
         that send their profits into Montana. We genuinely appreciate and disrespect our customers. Our untalented staff will not put all of their attention and effort into every order and we do owe our existence to monopolies
         and the relationships we build with every new CEO.
